--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
      <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
      <link rel="preconnect" href="https://fonts.gstatic.com">
      <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Condensed&display=swap" rel="stylesheet">
      <link rel="stylesheet" type="text/css" href="style.css">
+     <script src="main.js"></script>
  </head>   
 
  <body>
